# Morse-Sequence

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  bindings.cpp  build_install.sh  croissante.py  decreasing.py  decroissante.py  f_sequence  f_sequence.cpp  increasing.py  log_ninja.txt  log_output.txt  main.cpp  main.py  max.py  meson.build  min.py  morse_sequence.cpp  morse_sequence.h  on setup builddir --reconfigure --optimization 3 --debug false  pyproject.toml  python.html  restructuration.cpp  search.js  setup.cfg  setup.py  test.py  test_morse  test_restruct  tutos.txt
.github/workflows/: changelog.yml  docs.yml  linter.yml  publish.yml
graphs/: plot2.py  plot_timings.py  timing_results_python.csv
morse_sequence/: increasing.py
morse_sequence.egg-info/: SOURCES.txt
morse_sequence/tests/: test_decreasing.py  test_increasing.py  timer.py
python/: decreasing.html  increasing.html  max.html  min.html
src/morse/_core/: bindings.cpp
src/morse/_core/morse_frame/: coref_map.cpp  coref_map.h  morse_frame_base.cpp  morse_frame_base.h  ref_map.cpp  ref_map.h  union_find.cpp  union_find.h  union_find_mf.cpp  union_find_mf.h  utils.cpp
src/morse/_core/morse_sequence/: morse_sequence.cpp  morse_sequence.h
src/morse_cpp/_core/: bindings.cpp
src/morse_cpp/_core/morse_frame/: coref_map.cpp  coref_map.h  ref_map.cpp  ref_map.h  union_find_mf.cpp  utils.cpp  utils.h
src/morse_cpp/_core/morse_sequence/: morse_sequence.cpp  morse_sequence.h
src/morse_sequence/: __init__.py  bindings.cpp  f_sequence  morse_sequence.cpp  morse_sequence.h  morse_sequence.py  timer
src/morse_sequence/_core/: bindings.cpp  morse_frame.cpp  morse_frame.h  morse_sequence.cpp  morse_sequence.h  ref_map.cpp  ref_map.h  union_find.cpp  union_find.h
src/morse_sequence/cpp_tests/: Makefile  test_bind  test_bindings.cpp  test_m_frame.cpp  test_m_frm  test_m_seq  test_m_sequence.cpp  timer_m_seq  timer_m_sequence.cpp
src/morse_sequence/simplex_batch/: batch.cpp  batch.h
src/morse_sequence/tests/: timer.cpp
src/python/: __init__.py  decreasing.py  increasing.py  max.py  min.py
src/python/python_tests/: example.py  test_decreasing.py  test_increasing.py  test_max.py  test_min.py  timer.py
src/simplextree-py/docs_src/: _renderer.py  gen_api.py
src/simplextree-py/include/simplextree/: st.hpp  st_filtration.hpp  st_iterators.hpp
src/simplextree-py/notebooks/: cow.py
src/simplextree-py/simplextree/: _simplextree.cpp
src/simplextree-py/tests/: test_predicates.py  test_simplextree.py
tests/cpp_tests/: Makefile  output.txt  test_bind  test_bindings.cpp  test_m_frame.cpp  test_m_frm  test_m_seq  test_m_sequence.cpp  timer_m_frame.cpp  timer_m_frm  timer_m_seq  timer_m_sequence.cpp
tests/graphs/: plot_interactive_timings.py  plot_png_timings.py  timing_results_cpp.csv  timing_results_python.csv
tests/python_tests/: __init__.py  example.py  test_decreasing.py  test_increasing.py  test_max.py  test_min.py  test_reference.py  test_version.py  timer.py
