[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[project]
name = "morse-sequence"
version = "0.1.3"
description = "Python interface to compute Morse Sequence in C++"
authors = [
    { name = "Thomas Pernot" }
]
dependencies = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
urls = { "Homepage" = "https://github.com/RussianDoggo21/morse-sequence", "Repository" = "https://github.com/RussianDoggo21/morse-sequence.git", "Documentation" = "https://github.com/RussianDoggo21/morse-sequence/docs"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["morse", "sequence", "cpp", "interface"]
optional-dependencies = {dev = ["pytest", "black"]}

