[build-system] 
requires = ["meson-python", "pybind11"] 
build-backend = "mesonpy"

[project]
name = "morse-sequence"
version = "0.1.5"
description = "Python interface to compute Morse Sequences and Morse Frames in C++"
authors = [
    { name = "Thomas Pernot" }
]
dependencies = ["simplextree>=0.1.0"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/RussianDoggo21/morse-sequence"
"Repository" = "https://github.com/RussianDoggo21/morse-sequence.git"



