[metadata]
name = morse-frame
version = 0.1.0
author = Thomas Pernot
description = Morse function framework with pybind11 bindings
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
